Improvements on migration oplan